// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should map state to props correctly 1`] = `
<ExpenseListItem
  amount={4500}
  createdAt={345600000}
  description="credit Card"
  id="third"
  key="third"
  note=""
/>
`;

exports[`should render ExpenseList with given expenses 1`] = `
Array [
  <ExpenseListItem
    amount={1}
    createdAt={0}
    description="candy"
    id="first"
    key="first"
    note="sweet!"
  />,
  <ExpenseListItem
    amount={1009500}
    createdAt={-345600000}
    description="Rent"
    id="second"
    key="second"
    note="too much!"
  />,
  <ExpenseListItem
    amount={4500}
    createdAt={345600000}
    description="credit Card"
    id="third"
    key="third"
    note=""
  />,
]
`;

exports[`should render ExpenseList with no expenses 1`] = `
<p>
  No expenses
</p>
`;
